--- a/index.html
+++ b/index.html
@@ -6,17 +6,54 @@
     <title>Mykhailo</title>
 </head>
 <body>
+
+
+    <style>
+
+        h1{
+            font-size: 100px;
+         font-style: italic;
+            color: rgb(255, 255, 255);
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            background: rgb(123, 123, 252);
+
+        }
+
+        body{
+            width: 500px;
+            background-color: rgb(161, 161, 161);
+            margin: 0 auto;
+        }
+
+        img{
+            width: 100%;
+        }
+
+       
+
+
+
+
+
+    </style>
+
+
+
+
+
+
+
     <h1>Новини спорту </h1>
     <ul>
 
-        <li>Стало відомо, хто буде помічниками ван Леувена у Шахтарі</li>
-        <li>Джерело: Полісся підписало зірку молодіжної збірної України</li>
-        <li>Іспанія U21 – Україна U21. Пресконференція Ротаня. Дивитися онлайн. LIVE</li>
-        <li>ОФІЦІЙНО. Екс-півзахисник Шахтаря залишив клуб USL</li>
+        <li> <a href="#one">Стало відомо, хто буде помічниками ван Леувена у Шахтарі</a> </li>
+        <li> <a href="#two">Джерело: Полісся підписало зірку молодіжної збірної України</a></li>
+        <li><a href="#three">Іспанія U21 – Україна U21. Пресконференція Ротаня. Дивитися онлайн. LIVE</a></li>
+        <li> <a href="#four">ОФІЦІЙНО. Екс-півзахисник Шахтаря залишив клуб USL</a>  </li>
 
     </ul>
 
-   <div class="new">
+   <div id="one"  class="new">
     <h2>Стало відомо, хто буде помічниками ван Леувена у Шахтарі</h2>
     <img  src="https://pic.sport.ua/images/news/0/15/162/orig_632570.jpg" width="300px" alt="картинка новини №1">
 
@@ -30,7 +67,7 @@
    </div>
 
    
-   <div class="new">
+   <div id="two" class="new">
     <h2>Джерело: Полісся підписало зірку молодіжної збірної України</h2>
     <img  src="https://pic.sport.ua/images/news/0/15/163/orig_632635.jpg" width="300px" alt="картинка новини №1">
 
@@ -41,7 +78,7 @@
         Попереднім клубом Ярмоленка був «Аль-Айн». Після відходу з «Динамо» Київ влітку 2017 року Ярмоленко також захищав кольори «Боруссії» Дортмунд і лондонського «Вест Хема». Раніше ЗМІ повідомляли про те, що Ярмоленко стане найбільш високооплачуваним гравцем «Динамо» із зарплатою в 1 мільйон доларів на рік. Після завершення кар'єри Ярмоленко займе крісло спортивного директора «Динамо».</p>
    </div>
 
-   <div class="new">
+   <div id="three" class="new">
     <h2>Іспанія U21 – Україна U21. Пресконференція Ротаня. Дивитися онлайн. LIVE</h2>
     <img  src="https://pic.sport.ua/images/news/0/15/163/orig_632632.jpg" width="300px" alt="картинка новини №1">
 
@@ -55,7 +92,7 @@
         </p>
    </div>
 
-   <div class="new">
+   <div id="four" class="new">
     <h2>ОФІЦІЙНО. Екс-півзахисник Шахтаря залишив клуб USL</h2>
     <img  src="https://pic.sport.ua/images/news/0/15/163/orig_632659.jpg" width="300px" alt="картинка новини №1">
 
@@ -70,6 +107,7 @@
 
 
 
+   <a href="/index.html" style="position: fixed ; font-size: 18px; bottom: 30px; right: 30px; background: rgb(135, 46, 87); color: aliceblue; border-radius: 50%; width: 100px; height: 100px; text-align: center;"></a>
 
 </body>
 </html>
